--- a/print.html
+++ b/print.html
@@ -4450,7 +4450,7 @@ of the file has move to a <a href="https://docs.rs/rust_xlsxwriter/latest/rust_x
 </ul>
 </li>
 <li>
-<p>Made the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet::new.html#method."><code>Worksheet::new()</code></a> method public and added the
+<p>Made the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.new"><code>Worksheet::new()</code></a> method public and added the
 <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Workbook.html#method.push_worksheet"><code>workbook.push_worksheet()</code></a> to add Worksheet instances to a Workbook. See
 also the <code>rust_xlsxwriter</code> documentation on <a href="https://rustxlsxwriter.github.io/worksheet/create.html">Creating Worksheets</a> and working
 with the borrow checker.</p>
