--- a/print.html
+++ b/print.html
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">rust_xlsxwriter</a></li><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="getting_stared.html"><strong aria-hidden="true">1.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="tutorial/intro.html"><strong aria-hidden="true">2.</strong> Tutorial</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tutorial/tutorial1.html"><strong aria-hidden="true">2.1.</strong> Adding data to a worksheet</a></li><li class="chapter-item expanded "><a href="tutorial/tutorial2.html"><strong aria-hidden="true">2.2.</strong> Adding some formatting</a></li><li class="chapter-item expanded "><a href="tutorial/tutorial3.html"><strong aria-hidden="true">2.3.</strong> Adding dates and more formatting</a></li></ol></li><li class="chapter-item expanded "><a href="workbook/intro.html"><strong aria-hidden="true">3.</strong> The Workbook struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="workbook/saving.html"><strong aria-hidden="true">3.1.</strong> Creating and saving an xlsx file</a></li></ol></li><li class="chapter-item expanded "><a href="worksheet/intro.html"><strong aria-hidden="true">4.</strong> The Worksheet struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="worksheet/create.html"><strong aria-hidden="true">4.1.</strong> Creating worksheets</a></li><li class="chapter-item expanded "><a href="worksheet/page_setup.html"><strong aria-hidden="true">4.2.</strong> Page Setup</a></li><li class="chapter-item expanded "><a href="worksheet/headers.html"><strong aria-hidden="true">4.3.</strong> Adding Headers and Footers</a></li></ol></li><li class="chapter-item expanded "><a href="format/intro.html"><strong aria-hidden="true">5.</strong> The Format struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="format/creating.html"><strong aria-hidden="true">5.1.</strong> Creating and using a Format object</a></li><li class="chapter-item expanded "><a href="format/defaults.html"><strong aria-hidden="true">5.2.</strong> Format defaults</a></li><li class="chapter-item expanded "><a href="format/methods.html"><strong aria-hidden="true">5.3.</strong> Format methods</a></li><li class="chapter-item expanded "><a href="format/colors.html"><strong aria-hidden="true">5.4.</strong> Format colors</a></li><li class="chapter-item expanded "><a href="format/categories.html"><strong aria-hidden="true">5.5.</strong> Number Format Categories</a></li><li class="chapter-item expanded "><a href="format/locals.html"><strong aria-hidden="true">5.6.</strong> Number Formats in different Locals</a></li></ol></li><li class="chapter-item expanded "><a href="formulas/intro.html"><strong aria-hidden="true">6.</strong> Working with Formulas</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="formulas/results.html"><strong aria-hidden="true">6.1.</strong> Formula Results</a></li><li class="chapter-item expanded "><a href="formulas/syntax.html"><strong aria-hidden="true">6.2.</strong> Non US Excel functions and syntax</a></li><li class="chapter-item expanded "><a href="formulas/dynamic_arrays.html"><strong aria-hidden="true">6.3.</strong> Dynamic Array support</a></li><li class="chapter-item expanded "><a href="formulas/future_functions.html"><strong aria-hidden="true">6.4.</strong> Formulas added in Excel 2010 and later</a></li><li class="chapter-item expanded "><a href="formulas/errors.html"><strong aria-hidden="true">6.5.</strong> Dealing with formula errors</a></li></ol></li><li class="chapter-item expanded "><a href="examples/intro.html"><strong aria-hidden="true">7.</strong> Cookbook Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/hello_world.html"><strong aria-hidden="true">7.1.</strong> Hello World</a></li><li class="chapter-item expanded "><a href="examples/demo.html"><strong aria-hidden="true">7.2.</strong> Feature demo</a></li><li class="chapter-item expanded "><a href="examples/formatting.html"><strong aria-hidden="true">7.3.</strong> Cell formatting</a></li><li class="chapter-item expanded "><a href="examples/colors.html"><strong aria-hidden="true">7.4.</strong> Format colors</a></li><li class="chapter-item expanded "><a href="examples/right_to_left.html"><strong aria-hidden="true">7.5.</strong> Right to left display</a></li><li class="chapter-item expanded "><a href="examples/dynamic_arrays.html"><strong aria-hidden="true">7.6.</strong> Dynamic array formulas</a></li><li class="chapter-item expanded "><a href="examples/headers.html"><strong aria-hidden="true">7.7.</strong> Headers and Footers</a></li></ol></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">8.</strong> Performance</a></li><li class="chapter-item expanded "><a href="changelog.html"><strong aria-hidden="true">9.</strong> Release Notes</a></li><li class="chapter-item expanded "><a href="license.html"><strong aria-hidden="true">10.</strong> License</a></li><li class="chapter-item expanded "><a href="author.html"><strong aria-hidden="true">11.</strong> Author</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">rust_xlsxwriter</a></li><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="getting_stared.html"><strong aria-hidden="true">1.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="tutorial/intro.html"><strong aria-hidden="true">2.</strong> Tutorial</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tutorial/tutorial1.html"><strong aria-hidden="true">2.1.</strong> Adding data to a worksheet</a></li><li class="chapter-item expanded "><a href="tutorial/tutorial2.html"><strong aria-hidden="true">2.2.</strong> Adding some formatting</a></li><li class="chapter-item expanded "><a href="tutorial/tutorial3.html"><strong aria-hidden="true">2.3.</strong> Adding dates and more formatting</a></li></ol></li><li class="chapter-item expanded "><a href="workbook/intro.html"><strong aria-hidden="true">3.</strong> The Workbook struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="workbook/saving.html"><strong aria-hidden="true">3.1.</strong> Creating and saving an xlsx file</a></li></ol></li><li class="chapter-item expanded "><a href="worksheet/intro.html"><strong aria-hidden="true">4.</strong> The Worksheet struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="worksheet/create.html"><strong aria-hidden="true">4.1.</strong> Creating worksheets</a></li><li class="chapter-item expanded "><a href="worksheet/page_setup.html"><strong aria-hidden="true">4.2.</strong> Page Setup</a></li><li class="chapter-item expanded "><a href="worksheet/headers.html"><strong aria-hidden="true">4.3.</strong> Adding Headers and Footers</a></li></ol></li><li class="chapter-item expanded "><a href="format/intro.html"><strong aria-hidden="true">5.</strong> The Format struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="format/creating.html"><strong aria-hidden="true">5.1.</strong> Creating and using a Format object</a></li><li class="chapter-item expanded "><a href="format/defaults.html"><strong aria-hidden="true">5.2.</strong> Format defaults</a></li><li class="chapter-item expanded "><a href="format/methods.html"><strong aria-hidden="true">5.3.</strong> Format methods</a></li><li class="chapter-item expanded "><a href="format/colors.html"><strong aria-hidden="true">5.4.</strong> Format colors</a></li><li class="chapter-item expanded "><a href="format/categories.html"><strong aria-hidden="true">5.5.</strong> Number Format Categories</a></li><li class="chapter-item expanded "><a href="format/locals.html"><strong aria-hidden="true">5.6.</strong> Number Formats in different Locals</a></li></ol></li><li class="chapter-item expanded "><a href="formulas/intro.html"><strong aria-hidden="true">6.</strong> Working with Formulas</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="formulas/results.html"><strong aria-hidden="true">6.1.</strong> Formula Results</a></li><li class="chapter-item expanded "><a href="formulas/syntax.html"><strong aria-hidden="true">6.2.</strong> Non US Excel functions and syntax</a></li><li class="chapter-item expanded "><a href="formulas/dynamic_arrays.html"><strong aria-hidden="true">6.3.</strong> Dynamic Array support</a></li><li class="chapter-item expanded "><a href="formulas/future_functions.html"><strong aria-hidden="true">6.4.</strong> Formulas added in Excel 2010 and later</a></li><li class="chapter-item expanded "><a href="formulas/errors.html"><strong aria-hidden="true">6.5.</strong> Dealing with formula errors</a></li></ol></li><li class="chapter-item expanded "><a href="examples/intro.html"><strong aria-hidden="true">7.</strong> Cookbook Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/hello_world.html"><strong aria-hidden="true">7.1.</strong> Hello World</a></li><li class="chapter-item expanded "><a href="examples/demo.html"><strong aria-hidden="true">7.2.</strong> Feature demo</a></li><li class="chapter-item expanded "><a href="examples/formatting.html"><strong aria-hidden="true">7.3.</strong> Cell formatting</a></li><li class="chapter-item expanded "><a href="examples/colors.html"><strong aria-hidden="true">7.4.</strong> Format colors</a></li><li class="chapter-item expanded "><a href="examples/right_to_left.html"><strong aria-hidden="true">7.5.</strong> Right to left display</a></li><li class="chapter-item expanded "><a href="examples/dynamic_arrays.html"><strong aria-hidden="true">7.6.</strong> Dynamic array formulas</a></li><li class="chapter-item expanded "><a href="examples/headers.html"><strong aria-hidden="true">7.7.</strong> Headers and Footers</a></li><li class="chapter-item expanded "><a href="examples/panes.html"><strong aria-hidden="true">7.8.</strong> Freeze Panes</a></li></ol></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">8.</strong> Performance</a></li><li class="chapter-item expanded "><a href="changelog.html"><strong aria-hidden="true">9.</strong> Release Notes</a></li><li class="chapter-item expanded "><a href="license.html"><strong aria-hidden="true">10.</strong> License</a></li><li class="chapter-item expanded "><a href="author.html"><strong aria-hidden="true">11.</strong> Author</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -4313,6 +4313,136 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     worksheet5.set_header(&quot;&amp;CCuriouser &amp;&amp; Curiouser - Attorneys at Law&quot;);
 
     workbook.save(&quot;headers_footers.xlsx&quot;)?;
+
+    Ok(())
+}
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="freeze-panes"><a class="header" href="#freeze-panes">Freeze Panes</a></h1>
+<p>An example of setting some &quot;freeze&quot; panes in worksheets to split the worksheet
+into scrolling and non-scrolling areas. This is generally used to have one or
+more row or column to the top or left of the worksheet area that stays fixed
+when a user scrolls.</p>
+<p><img src="examples/../../images/panes.png" alt="Image of output from app_hello_world.rs" /></p>
+<pre><code class="language-rust"><span class="boring">// SPDX-License-Identifier: MIT OR Apache-2.0
+</span><span class="boring">// Copyright 2022, John McNamara, jmcnamara@cpan.org
+</span><span class="boring">
+</span><span class="boring">//! A simple example of setting some &quot;freeze&quot; panes in worksheets using the
+</span><span class="boring">//! rust_xlsxwriter library.
+</span><span class="boring">
+</span>use rust_xlsxwriter::{Format, Workbook, XlsxAlign, XlsxBorder, XlsxColor, XlsxError};
+
+fn main() -&gt; Result&lt;(), XlsxError&gt; {
+    // Create a new Excel file object.
+    let mut workbook = Workbook::new();
+
+    // Create some formats to use in the worksheet.
+    let header_format = Format::new()
+        .set_bold()
+        .set_align(XlsxAlign::Center)
+        .set_align(XlsxAlign::VerticalCenter)
+        .set_foreground_color(XlsxColor::RGB(0xD7E4BC))
+        .set_border(XlsxBorder::Thin);
+
+    let center_format = Format::new().set_align(XlsxAlign::Center);
+
+    // Some range limits to use in this example.
+    let max_row = 50;
+    let max_col = 26;
+
+    // -----------------------------------------------------------------------
+    // Example 1. Freeze pane on the top row.
+    // -----------------------------------------------------------------------
+    let worksheet1 = workbook.add_worksheet().set_name(&quot;Panes 1&quot;)?;
+
+    // Freeze the top row only.
+    worksheet1.set_freeze_panes(1, 0)?;
+
+    // Add some data and formatting to the worksheet.
+    worksheet1.set_row_height(0, 20)?;
+    for col in 0..max_col {
+        worksheet1.write_string(0, col, &quot;Scroll down&quot;, &amp;header_format)?;
+        worksheet1.set_column_width(col, 16)?;
+    }
+    for row in 1..max_row {
+        for col in 0..max_col {
+            worksheet1.write_number(row, col, row + 1, &amp;center_format)?;
+        }
+    }
+
+    // -----------------------------------------------------------------------
+    // Example 2. Freeze pane on the left column.
+    // -----------------------------------------------------------------------
+    let worksheet2 = workbook.add_worksheet().set_name(&quot;Panes 2&quot;)?;
+
+    // Freeze the leftmost column only.
+    worksheet2.set_freeze_panes(0, 1)?;
+
+    // Add some data and formatting to the worksheet.
+    worksheet2.set_column_width(0, 16)?;
+    for row in 0..max_row {
+        worksheet2.write_string(row, 0, &quot;Scroll Across&quot;, &amp;header_format)?;
+
+        for col in 1..max_col {
+            worksheet2.write_number(row, col, col, &amp;center_format)?;
+        }
+    }
+
+    // -----------------------------------------------------------------------
+    // Example 3. Freeze pane on the top row and leftmost column.
+    // -----------------------------------------------------------------------
+    let worksheet3 = workbook.add_worksheet().set_name(&quot;Panes 3&quot;)?;
+
+    // Freeze the top row and leftmost column.
+    worksheet3.set_freeze_panes(1, 1)?;
+
+    // Add some data and formatting to the worksheet.
+    worksheet3.set_row_height(0, 20)?;
+    worksheet3.set_column_width(0, 16)?;
+    worksheet3.write_blank(0, 0, &amp;header_format)?;
+
+    for col in 1..max_col {
+        worksheet3.write_string(0, col, &quot;Scroll down&quot;, &amp;header_format)?;
+        worksheet3.set_column_width(col, 16)?;
+    }
+    for row in 1..max_row {
+        worksheet3.write_string(row, 0, &quot;Scroll Across&quot;, &amp;header_format)?;
+
+        for col in 1..max_col {
+            worksheet3.write_number(row, col, col, &amp;center_format)?;
+        }
+    }
+
+    // -----------------------------------------------------------------------
+    // Example 4. Freeze pane on the top row and leftmost column, with
+    //            scrolling area shifted.
+    // -----------------------------------------------------------------------
+    let worksheet4 = workbook.add_worksheet().set_name(&quot;Panes 4&quot;)?;
+
+    // Freeze the top row and leftmost column.
+    worksheet4.set_freeze_panes(1, 1)?;
+
+    // Shift the scrolled area to in the scrolling pane.
+    worksheet4.set_freeze_panes_top_cell(20, 12)?;
+
+    // Add some data and formatting to the worksheet.
+    worksheet4.set_row_height(0, 20)?;
+    worksheet4.set_column_width(0, 16)?;
+    worksheet4.write_blank(0, 0, &amp;header_format)?;
+
+    for col in 1..max_col {
+        worksheet4.write_string(0, col, &quot;Scroll down&quot;, &amp;header_format)?;
+        worksheet4.set_column_width(col, 16)?;
+    }
+    for row in 1..max_row {
+        worksheet4.write_string(row, 0, &quot;Scroll Across&quot;, &amp;header_format)?;
+
+        for col in 1..max_col {
+            worksheet4.write_number(row, col, col, &amp;center_format)?;
+        }
+    }
+
+    // Save the file to disk.
+    workbook.save(&quot;panes.xlsx&quot;)?;
 
     Ok(())
 }
