--- a/print.html
+++ b/print.html
@@ -3108,6 +3108,16 @@ can then examine the XML in the unzipped file.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="cookbook-examples"><a class="header" href="#cookbook-examples">Cookbook Examples</a></h1>
 <p>This section contains sample applications that demonstrate different features of
 the rust_xlsxwriter library.</p>
+<ul>
+<li><a href="examples/./hello_world.html">Hello World</a>: Simple getting started example.</li>
+<li><a href="examples/./demo.html">Feature demo</a>: Demonstrates more features of the library.</li>
+<li><a href="examples/./formatting.html">Cell formatting</a>: Demonstrates various formatting options.</li>
+<li><a href="examples/./colors.html">Format colors</a>: Creates a palette of the available colors.</li>
+<li><a href="examples/./right_to_left.html">Right to left display</a>: Sets a worksheet into right to left format.</li>
+<li><a href="examples/./dynamic_arrays.html">Dynamic array formulas</a>: Examples of dynamic arrays and formulas.</li>
+<li><a href="examples/./headers.html">Headers and Footers</a>: Shows how to set headers and footers.</li>
+<li><a href="examples/./panes.html">Freeze Panes</a>: Example of setting freeze panes in worksheets.</li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="hello-world"><a class="header" href="#hello-world">Hello World</a></h1>
 <p>Program to create a simple Hello World style Excel spreadsheet using the
 rust_xlsxwriter library.</p>
