--- a/examples/intro.html
+++ b/examples/intro.html
@@ -145,6 +145,16 @@
                         <h1 id="cookbook-examples"><a class="header" href="#cookbook-examples">Cookbook Examples</a></h1>
 <p>This section contains sample applications that demonstrate different features of
 the rust_xlsxwriter library.</p>
+<ul>
+<li><a href="./hello_world.html">Hello World</a>: Simple getting started example.</li>
+<li><a href="./demo.html">Feature demo</a>: Demonstrates more features of the library.</li>
+<li><a href="./formatting.html">Cell formatting</a>: Demonstrates various formatting options.</li>
+<li><a href="./colors.html">Format colors</a>: Creates a palette of the available colors.</li>
+<li><a href="./right_to_left.html">Right to left display</a>: Sets a worksheet into right to left format.</li>
+<li><a href="./dynamic_arrays.html">Dynamic array formulas</a>: Examples of dynamic arrays and formulas.</li>
+<li><a href="./headers.html">Headers and Footers</a>: Shows how to set headers and footers.</li>
+<li><a href="./panes.html">Freeze Panes</a>: Example of setting freeze panes in worksheets.</li>
+</ul>
 
                     </main>
 
