--- a/examples/intro.html
+++ b/examples/intro.html
@@ -154,6 +154,7 @@ the rust_xlsxwriter library.</p>
 <li><a href="./dynamic_arrays.html">Dynamic array formulas</a>: Examples of dynamic arrays and formulas.</li>
 <li><a href="./headers.html">Headers and Footers</a>: Shows how to set headers and footers.</li>
 <li><a href="./panes.html">Freeze Panes</a>: Example of setting freeze panes in worksheets.</li>
+<li><a href="./autofit.html">Autofitting Columns</a>: Example of autofitting column widths.</li>
 </ul>
 
                     </main>
