--- a/worksheet/autofit.html
+++ b/worksheet/autofit.html
@@ -143,6 +143,25 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="autofitting-column-widths"><a class="header" href="#autofitting-column-widths">Autofitting column widths</a></h1>
+<p>Column widths in a <code>rust_xlsxwriter</code> worksheet can be adjusted automatically
+using the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.set_autofit"><code>worksheet.set_autofit()</code></a> method.</p>
+<p>There is no option available in the xlsx file format that <code>rust_xlsxwriter</code> can
+use to say &quot;autofit columns on loading&quot;. Auto-fitting of columns is something
+that Excel does at runtime when it has access to all of the worksheet
+information as well as the Windows functions for calculating display areas based
+on fonts and formatting.</p>
+<p>As such the autofit widths that are calculated by <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.set_autofit"><code>worksheet.set_autofit()</code></a>
+are based on simple heuristics. This isn't perfect but for most cases it should
+be sufficient and if not you can set your own widths, see below.</p>
+<p>The <code>worksheet.set_autofit()</code> method ignores columns that already have an
+explicit column width set via <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.set_column_width"><code>worksheet.set_column_width()</code></a> or
+<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.set_column_width_pixels"><code>worksheet.set_column_width_pixels()</code></a>. You can use these methods if you wish
+to override the <code>worksheet.set_autofit()</code> values.</p>
+<p>It is intended that the <code>worksheet.set_autofit()</code> fitting algorithm will be
+improved in upcoming releases.</p>
+<p><strong>Note</strong>, <code>worksheet.set_autofit()</code> iterates through all the cells in a
+worksheet that have been populated with data and performs a length calculation
+on each one, so it can have a performance overhead for bigger worksheets.</p>
 
                     </main>
 
